unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/breadwinner_ns__BW_Sales_Order__c.object-meta.xml
<CustomObject>
    <label>NetSuite Sales Order</label>
    <nameField>
        <label>Sales Order #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>