unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/breadwinner_ns__BillingCity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__BillingCity__c</fullName>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>