unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/breadwinner_ns__CreatedFrom_Estimate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CreatedFrom_Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Estimate</label>
    <referenceTo>breadwinner_ns__BW_Estimate__c</referenceTo>
    <relationshipLabel>Sales Orders Created From this Estimate</relationshipLabel>
    <relationshipName>BWSalesOrders</relationshipName>
    <type>Lookup</type>
</CustomField>