unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/breadwinner_ns__CustomFormInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CustomFormInternalId__c</fullName>
    <label>Custom Form Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>