unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/breadwinner_ns__Entity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>breadwinner_ns__BW_Company__c</referenceTo>
    <relationshipLabel>NetSuite Sales Orders</relationshipLabel>
    <relationshipName>BWSalesOrders</relationshipName>
    <type>Lookup</type>
</CustomField>