unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/breadwinner_ns__ShippingAddr2__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ShippingAddr2__c</fullName>
    <label>Shipping Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>