unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/breadwinner_ns__ShippingAddressee__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ShippingAddressee__c</fullName>
    <label>Shipping Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>