unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/breadwinner_ns__StartDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>