unpackaged/main/default/objects/breadwinner_ns__BW_Sales_Order__c/fields/ncf_body_customrecord_mhi_stripeid__c.field-meta.xml
<CustomField>
    <fullName>ncf_body_customrecord_mhi_stripeid__c</fullName>
    <label>Stripe Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>